<resources>
    <string name="app_name">MagicLineSJD</string>
    <string name="Barcelona_date">BARCELONA 05.03.2017</string>
    <string name="SantJoandeDeu">SANT JOAN DE DÉU</string>
    <string name="MagicLine">MAGIC\nLINE</string>
    <string name="InfoMagicLine">Gaudiu del camí, feu volar la imaginació a
    cada pas i deixeu contagiar-vos per l\'esperit de la Magic Line.\nPerò recordeu: <b>amb somiar no en tenim prou!</b></string>
    <string name="titol_SantJoan">Sant Joan de Déu</string>
    <string name="text_SantJoan">A <b>Sant Joan de Déu</b> atenem persones que es troben en situació de vulnerabilitat. \n \n A Barcelona,
        disposem d’11 centres des d’on fem projectes d’atenció, recerca i cooperació internacional per a persones en situació de
        sense llar, dependència, trastorn mental, amb discpacitat intel·lectual i infants. \n \n
        Gràcies a la solidaritat de persones com tu, donem a conèixer la seva situació i els oferim una assistència integral. \n \n
    </string>
    <string name="pagina_web">solidaritat.santjoandedeu.org</string>
    <string name="SobreApp">APP</string>
    <string name="sobreapp">Aquesta aplicació és el resultat del <b>treball voluntari</b> de quatre estudiants de la Universitat Politècnica de
        Catalunya (UPC) i participants del programa de voluntariat impulsat per un conveni de col·laboració entre la <b>UPC</b> i <b>l’Obra
        Social Sant Joan de Déu</b>. \n \n
        La primera versió que es va posar en marxa va ser creada per <b>Mariona Carós</b> i <b>Joan Febrer</b> i es va utilitzar en la caminada
        solidària del 28 de Febrer de 2016. Les versions posteriors han estat dissenyades per <b>Aleix Pellisa</b> i <b>Oriol Baldà</b>. \n \n
        L’app està protegida sota una llicència GPL (GNU), que permet la còpia, distribució i modificació del codi, sempre que es continuï
        distribuint amb la mateixa llicència GPL i es faci esment dels seus autors originals.</string>
    <string name="title_mlcultural">MUSEUS OBERTS</string>
    <string name="intro_mlcultural1">
        <b>EQUIPMANENTS CULTURALS OBREN LES PORTES A PARTICIPANTS I VOLUNTARIS DE LA MAGIC LINE SJD</b></string>
    <string name="intro_mlcultural2">
        El dia de la Magic Line SJD i durant tot el mes de març us oferim accés gratuït a 9 equipaments
        culturals ensenyant el Passaturons. \n \n
        Caixa Fòrum / MNAC / Fundació Joan Miró / Fundació Barcelona Olímpica / Jardí Botànic - Museu de Ciències Naturals / Poble Espanyol*
        / Termes Romanes de Sant Boi de Llobregat / Museu de Sant Boi de Llobregat / Museu de les Aigües de Cornellà \n \n
        El 25 de febrer, l\'accés està regulat per voluntaris de la Magic Line seguint requeriments d\'horaris i aforament. \n
        *Poble Espanyol: accés gratuït només el 25 de febrer.</string>
    <string name="title_museus"><b>Museus gratuïts</b></string>
    <string name="info_museus_gratuits">El passaturons de la Magic Line us permet accedir gratuïtament el dia de la caminada a:</string>
    <string name="llista_llocs_gratuits"><b>-</b> CaixaFòrum \n
        <b>-</b> Poble Espanyol \n
        <b>-</b> MNAC \n
        <b>-</b> Fundació Joan Miró \n
        <b>-</b> Museu Olímpic i de l\'Esport \n
        <b>-</b> Jardí Botànic</string>
    <string name="info2_museus_gratuits">Us recomanem accedir-hi entre les <b>10h</b> i les <b>14:30h</b>, per arribar a temps als espectacles
        culturals del Castell de Montjuïc i la plaça de la Catedral. L\'accés als diferents equipaments estarà regulat segons l’horari i
        l\'aforament en cadascun d\'ells.</string>
    <string name="info3_museus_gratuits"><b>També durant el mes de març podreu accedir gratuïtament a aquests equipaments ensenyant el Passaturons, a més del
        Museu Agbar de les Aigües i excepte al Poble Espanyol.</b></string>
    <string name="title_arts">Arts al carrer</string>
    <string name="info1_arts"><b>Diumenge 5 de març teatre, dansa, graffiti, pintura... durant la caminada.</b></string>
    <string name="info2_arts">Al fossar del Castell de Montjuïc us espera un espai per dinar amb espectacles d’arreu del món!</string>
    <string name="info3_arts">Estigueu atents! Trobareu propostes d’arts escèniques i plàstiques, interpretades per artistes voluntaris implicats en
        la inclusió social.</string>
    <string name="title_concert">Concert solidari</string>
    <string name="lloc_hora_concert"><b>Diumenge 5 de març a partir de les 17h a la plaça de la Catedral de Barcelona pugen a l\'escenari músics de
        renom junts a usuaris dels centres de Sant Joan de Déu i els programes socials del Taller de músics.</b></string>
    <string name="info_concert"><b>Gossos</b>, <b>Quimi Portet</b>, <b>Animal</b>, <b>Andreu Rifé</b>, <b>Motis &amp; Chamorro &amp; Motis Trio</b>
        i <b>Clams</b>. \n\n En un concert presentat per <b>Joan Dausà</b> amb Manu Danso, Àngels Arnaus, Assumpció Malagarriga, Yoyo Marra, Carlos
        Ariza, Omar Boltes, Fredy Garcia i la Baix Llobregat Music Line.\n\n </string>
    <string name="title_gimcana">SONAMBULISTES</string>
    <string name="intro_gimcana"><b>SONAMBULISTES TRENCA ESTIGMES DAMUNT L\'ESCENARI</b></string>
    <string name="intro2_gimcana">Diumenge 25 de febrer a les 17h la plaça de la Catedral de Barcelona tindrà lloc <b>l\'espectacle inclusiu \'Sonambulistes\'
        </b>, una proposta que uneix música, dansa, circ, teatre, màgia, clown i il·lustració, sota la direcció artística de Martí Torras, per trencar estigmes
        i reflexionar entorn la vulnerabilitat. \n \n
        Artistes professionals i amateurs de projectes socials recullen l\'esperit d\'equip i cooperació dels participants i voluntaris de la Magic Line
        Sant Joan de Déu i ens transportaran a un món d\'escales, escaletes i esglaons des d’on es poden aconseguir tots els somnis. Els teus somnis, els
        meus somnis, els somnis de totes aquelles persones que passen per una situació complicada... els somiar, que tots compartim.</string>
    <string name="proves1_gimcana"><b>-</b> Parla amb un altre equip de la Magic Line \n
        <b>-</b> Dóna les gràcies a un voluntari \n
        <b>-</b> Comparteix un lloc de la ciutat que no coneguessis \n
        <b>-</b> Explica\'ns un moment il·lusionant de la caminada</string>
    <string name="proves2_gimcana">Cada foto o vídeo que pugis amb l\'etiqueta entra a sorteig.</string>
    <string name="premis_condicions">Premis i condicions</string>
    <string name="title_picnic">PICNIC CULTURAL</string>
    <string name="intro_picnic"><b>PÍCNIC CULTURAL AL CASTELL DE MONTJUÏC</b></string>
    <string name="intro2_picnic">Al Fossar del Castell de Montjuïc hi trobaràs un espai de PicNic per parar a descansar per dinar i gaudir de propostes
        culturals. \n \n
        <b>Escenari</b> \n
        11 a 12h DJ J.Trenchs \n
        12 a 13h Rock familiar amb The Git and Jalis \n
        13 a 15h Karaoke Band \n
        15 a 16h La magia de Borja Pérez \n
        16 a 18h Concert J.Trenchs \n \n
        <b>Espais de participació</b> \n
        11h a 16.30h Mural col·laboratiu RefugiArte \n
        11 a 17h Stop Motion, Artichoke \n
        11 a 17 h Jocs Cooperatius \n
        12 a 17.30h Xarxa de les S de Solidaritat \n \n
        I més sorpreses!</string>
    <string name="info_premis">Pugeu les fotos a les xarxes socials amb els hashtags <b>#ExploraML</b> i <b>#MagicLine2017</b> i
        entrareu al sorteig de:</string>
    <string name="list_premis"><b>-</b> 1 pack de 4 entrades per una partida de jocs làser. \n\n
        <b>-</b> 1 pack familiar de 4 entrades per visitar Granja Aventura Park. \n\n
        <b>-</b> 1 pack familiar de 4 entrades per a una excursió familiar a Viladrau. \n\n
        <b>-</b> 1 pack (2 entrades de nen i 2 d\'adult) per a la visita teatralitzada al Castell de Cardona. \n\n
        <b>-</b> 1 pack (2 entrades de nen i 2 d\'adult) per a la visita al parc cultural de la muntanya de sal de Cardona. \n\n
        <b>-</b> 1 sessió de Reiki individualitzada. \n\n
        <b>-</b> 1 calendari Gran Explorador de paret del 2017. \n</string>
    <string name="title_condicions">Condicions del sorteig:</string>
    <string name="list_condicions"><b>-</b> Podeu participar durant tot el dia de la Magic Line Sant Joan de Déu - 5 de Març 2017. \n\n
        <b>-</b> El sorteig es farà el dijous 9 de març, amb el número de la <b>ONCE</b>. Els guanyadors seran els que coincideixin amb el
        número guanyador i els consecutius. \n\n
        <b>-</b> Per participar puja una foto / vídeo a les xarxes xocials amb el hashtag <b>#ExploraML</b> i <b>#MagicLine2017</b>. \n\n
        <b>-</b> S\'anunciaran els noms dels guanyadors a través de les xarxes socials. Si el guanyador no ha contactat amb <b>Petit Explorador</b>
        transcorregudes 24 hores, el premi s\'atorgarà al primer suplent, el qual tindrà 24 hores més per comunicar-se amb l\'organitzador. \n\n
        <b>-</b> <b>Petit Explorador</b> es reserva el dret de passar al següent suplent si el guanyador no compleix les bases del sorteig, alguns
        dels requisits o normes.</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_facebook">Facebook</string>
    <string name="title_activity_sobrelapp">Sobrelapp</string>
    <string name="title_activity_emergencia">Emergencia</string>
    <string name="title_activity_sant_joan_deu">SantJoanDeu</string>
    <string name="title_activity_soci">Soci</string>
    <string name="title_activity_web">Web</string>
    <string name="title_activity_mlcultural">MLCultural</string>
    <string name="title_activity_concert">Concert</string>
    <string name="title_activity_arts">Arts</string>
    <string name="title_activity_museus">Museus</string>
    <string name="title_activity_gimcana">Gimcana</string>
    <string name="title_activity_premis_condicions">Premis i condicions</string>
    <string name="title_activity_petit_explorador">Petit explorador</string>
    <string name="title_activity_gran_explorador">Gran explorador</string>
    <string name="title_activity_announcement">Últimes notícies</string>
    <string name="title_activity_instagram">Instagram</string>
    <string name="title_activity_picnic_cultural">Picnic Cultural</string>
    <string name="button1">MAPA I PUNTS D\'INTERÈS \</string>
    <string name="button2">MUSEUS OBERTS \</string>
    <string name="button3">SONAMBULISTES \</string>
    <string name="button4">PÍCNIC CULTURAL \</string>
    <string name="pop_up_title">TRUCADA D\'EMERGÈNCIES</string>
    <string name="pop_up_question">Vols trucar al 112?</string>
    <string name="pop_up_answer1">Cancel·lar</string>
    <string name="pop_up_answer2">Trucar</string>
    <string name="check_permission_phone">Has de permetre permisos de trucada</string>
    <string name="check_permission_maps">Has de permetre permisos de localització</string>
    <string name="check_permission_storage">Has de permetre permisos d\'emmagatzematge</string>
    <string name="button_route_10km">10</string>
    <string name="button_route_15km">15</string>
    <string name="button_route_20km">20</string>
    <string name="button_route_25km">25</string>
    <string name="button_route_30km">30</string>
    <string name="button_route_40km">40</string>
    <string name="titol_app">#MagicLine</string>
    <string name="title_notification_default">Magic Line</string>
    <string name="title_announcement_default">Notícia Magic Line</string>
    <string name="body_notification_default">Hi ha una notícia nova!</string>
    <string name="body_announcement_default">No hi ha descripció de la notícia.</string>
    <string name="no_notificacions">No tens cap notificació</string>
</resources>