<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_route_10km"
            android:id="@+id/button_10km2"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:background="@drawable/roundedbutton"
            android:layout_margin="2dp"
            android:textSize="30dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_route_15km"
            android:id="@+id/button_15km2"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:background="@drawable/roundedbutton"
            android:padding="1dp"
            android:layout_margin="2dp"
            android:textSize="30dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_route_20km"
            android:id="@+id/button_20km2"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:background="@drawable/roundedbutton"
            android:padding="1dp"
            android:layout_margin="2dp"
            android:textSize="30dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_route_30km"
            android:id="@+id/button_30km2"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:background="@drawable/roundedbutton"
            android:padding="1dp"
            android:layout_margin="2dp"
            android:textSize="30dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_route_40km"
            android:id="@+id/button_40km2"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:background="@drawable/roundedbutton"
            android:padding="1dp"
            android:layout_margin="2dp"
            android:textSize="30dp"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>