<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_route_10km"
                android:id="@+id/button_10km"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/roundedbutton"
                android:layout_margin="2dp"
                android:textSize="30dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_route_15km"
                android:id="@+id/button_15km"
                android:textColor="#000000"
                android:textStyle="bold"
                android:background="@drawable/roundedbutton"
                android:padding="1dp"
                android:layout_margin="2dp"
                android:textSize="30dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_route_20km"
                android:id="@+id/button_20km"
                android:textColor="#000000"
                android:textStyle="bold"
                android:background="@drawable/roundedbutton"
                android:padding="1dp"
                android:layout_margin="2dp"
                android:textSize="30dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_route_25km"
                android:id="@+id/button_25km"
                android:textColor="#000000"
                android:textStyle="bold"
                android:background="@drawable/roundedbutton"
                android:padding="1dp"
                android:layout_margin="2dp"
                android:textSize="30dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_route_30km"
                android:id="@+id/button_30km"
                android:textColor="#000000"
                android:textStyle="bold"
                android:background="@drawable/roundedbutton"
                android:padding="1dp"
                android:layout_margin="2dp"
                android:textSize="30dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_route_40km"
                android:id="@+id/button_40km"
                android:textColor="#000000"
                android:textStyle="bold"
                android:background="@drawable/roundedbutton"
                android:padding="1dp"
                android:layout_margin="2dp"
                android:textSize="30dp"
                android:layout_weight="1" />

        </LinearLayout>

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/info_icon"
            android:id="@+id/button_show_markers"
            android:layout_margin="2dp"
            android:background="#00ffffff"
            android:scaleType="fitXY" />
    </LinearLayout>



</fragment>
