<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PremisICondicions"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_premis_condicions"
        android:id="@+id/titol_premis_condicions"
        android:paddingLeft="5dp"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/magicRed"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <View
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/magicRed"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_premis"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:id="@+id/info_premis"
                android:layout_centerVertical="true"
                android:textStyle="normal"
                android:textSize="18dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_premis"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:id="@+id/list_premis"
                android:layout_centerVertical="true"
                android:textStyle="normal"
                android:textSize="18dp"
                android:padding="10dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_condicions"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:id="@+id/title_condicions"
                android:layout_centerVertical="true"
                android:textStyle="normal"
                android:textSize="18dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_condicions"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:id="@+id/list_condicions"
                android:layout_centerVertical="true"
                android:textStyle="normal"
                android:textSize="18dp"
                android:padding="10dp"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
