<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ArtsAlCarrer">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_height="match_parent"
            app:srcCompat="@drawable/return_icon"
            android:id="@+id/returnButton"
            android:layout_weight="1"
            android:scaleType="fitXY"
            tools:background="#00ffffff"
            android:background="@drawable/return_icon"
            android:layout_width="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/title_arts"
            android:id="@+id/titol_arts"
            android:paddingLeft="5dp"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/magicRed"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/magicRed"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info1_arts"
        android:layout_marginTop="10dp"
        android:id="@+id/info1_arts"
        android:layout_gravity="center_vertical"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info2_arts"
        android:layout_marginTop="10dp"
        android:id="@+id/info2_arts"
        android:layout_gravity="center_vertical"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info3_arts"
        android:layout_marginTop="10dp"
        android:id="@+id/info3_arts"
        android:layout_gravity="center_vertical"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:textStyle="normal"
        android:textSize="18dp"
        android:padding="10dp"/>


</LinearLayout>
