<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PicnicCultural"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_height="match_parent"
            app:srcCompat="@drawable/return_icon"
            android:id="@+id/returnButton"
            android:layout_weight="1"
            android:scaleType="fitXY"
            tools:background="#00ffffff"
            android:background="@drawable/return_icon"
            android:layout_width="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_picnic"
            android:id="@+id/titol_PicnicCultural"
            android:paddingLeft="5dp"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/magicRed"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <View
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/magicRed"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_picnic"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:id="@+id/intro_mlcultural1"
                android:layout_centerVertical="true"
                android:textStyle="normal"
                android:textSize="18dp"
                android:padding="10dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_noti_web_concert"
                android:background="@null"
                android:src="@drawable/noti_web_picnic_cultural"
                android:adjustViewBounds="false"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro2_picnic"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:id="@+id/intro_mlcultural2"
                android:layout_centerVertical="true"
                android:textStyle="normal"
                android:textSize="18dp"
                android:padding="10dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
